# fs-store

./: .gitignore  README.md  docker-compose.yml
ci/: pipeline.yml  set-pipeline.sh
ci/tasks/: lint-web.yml  test-cli.yml  test-web.yml
cli/: Cargo.toml  dockerfile
cli/src/: lib.rs  main.rs
web/: .env  .env.test  .gitignore  dockerfile  package-lock.json  package.json  tsconfig.json
web/pages/: _app.tsx  _document.tsx  index.tsx
web/pages/api/files/: index.ts
web/pages/api/files/[id]/: index.ts
web/src/: theme.ts
web/src/components/: Notification.tsx
web/src/components/files/: FileController.tsx  Upload.tsx
web/src/components/files/table/: EnhancedTableHead.tsx  EnhancedTableToolbar.tsx  FileTable.tsx
web/src/components/layout/: Headbar.tsx  Layout.tsx
web/src/constants/: file.ts
web/src/contexts/: file-context.ts
web/src/lib/: connection.ts  file.ts
web/src/middlewares/: gridfs.ts
web/src/types/: file.ts
web/tests/: api.test.ts
web/tests/assets/: random.json
web/tests/lib/: file.test.ts
