[package]
name = "fs-store"
version = "0.1.0"
authors = ["m-baaziz <mha.baaziz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-multipart-rfc7578 = "0.5.0"
mime_guess = "2.0.3"

[dev-dependencies]
actix-rt = "2.0.2"
confy = "0.4.0"
